# weather

./: Dockerfile  docker-compose.yaml  pyproject.toml  readme.md
config/: settings.py
weather/: forms.py  models.py  tests.py  views.py
weather/migrations/: 0001_initial.py
weather/templates/weather/: weather.html
